@@ -2,10 +2,7 @@
 <rolemap>
   <permissions>
     <permission name="ftw.mail: Add Mail" acquire="True">
-      <role name="Owner"/>
       <role name="Manager"/>
-      <role name="Member"/>
-      <role name="Contributor"/>
     </permission>
     <permission name="ftw.mail: Add Inbound Mail" acquire="True">
       <role name="Owner"/>
